--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,7 +43,8 @@ services:
       - airflow_namenode:/root/airflow
       - ./configs/namenode/flume/flume-env.sh:/opt/flume/conf/flume-env.sh
       - ./flume_config/flume.conf:/opt/flume/conf/flume.conf
-      - hadoop_namenode_flume:/opt/flume
+      - hadoop_namenode_flume:/opt/flume      
+      - ./configs/namenode/hive-site.xml:/opt/spark/conf/hive-site.xml
     environment:
       - CLUSTER_NAME=hadoop-learning
       - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
